--- a/src/app/components/post/post-form-dialog/_ngx-editor.scss
+++ b/src/app/components/post/post-form-dialog/_ngx-editor.scss
@@ -3,7 +3,10 @@
         overflow-x: hidden;
         background-color: rgb(24 28 31);
         @media screen and (max-width: 430px) {
-            padding: 24px 18px;
+            padding: 20px 14px;
+        }
+        @media screen and (max-height: 490px) {
+            padding: 10px;
         }
     }
     .NgxEditor {
@@ -15,6 +18,15 @@
         &__Content {
             min-height: 30px;
             max-height: 140px;
+            @media screen and (max-height: 700px) {
+                max-height: 100px;
+            }
+            @media screen and (max-height: 570px) {
+                max-height: 53px;
+            }
+            @media screen and (max-height: 490px) {
+                max-height: 43px;
+            }
             line-height: 24px;
             font-weight: 400;
             font-size: 16px;
